assets/metrics-server/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: metrics-server
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: https
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
      app.kubernetes.io/part-of: openshift-monitoring
  policyTypes:
  - Ingress
  - Egress
